force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Super_Liability_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Super_Liability_Amount__c</fullName>
    <description>Employer Superannuation</description>
    <inlineHelpText>Employer 401k</inlineHelpText>
    <label>Super Liability Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>