force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Super_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Super_Member_Number__c</fullName>
    <description>The superannuation fund membership number of the payee</description>
    <inlineHelpText>The 401k fund membership number of the payee</inlineHelpText>
    <label>Super Member Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>