force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Superannuation_Fund__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Superannuation fund that the contributions will be submitted to</description>
    <inlineHelpText>Superannuation fund that the contributions will be submitted to</inlineHelpText>
    <label>Superannuation Fund</label>
    <referenceTo>tc9_pr__Superannuation_Fund__c</referenceTo>
    <relationshipLabel>Lodgement Items AU</relationshipLabel>
    <relationshipName>Lodgement_Items_AU</relationshipName>
    <type>Lookup</type>
</CustomField>