force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Superannuation_Fund_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Superannuation_Fund_Name__c</fullName>
    <formula>tc9_eau__Superannuation_Fund__r.tc9_pr__Fund_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Superannuation Fund Name</label>
    <type>Text</type>
</CustomField>