force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Tax_Offset_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Tax_Offset_Amount__c</fullName>
    <description>The annualised tax offset amount.</description>
    <inlineHelpText>The annualised tax offset amount.</inlineHelpText>
    <label>Tax Offset Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>