force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Tax_Treatment_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Tax_Treatment_Code__c</fullName>
    <description>The derived tax treatment code.</description>
    <inlineHelpText>The derived tax treatment code.</inlineHelpText>
    <label>Tax Treatment Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>