force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Terminated_Indicator__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Terminated_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payee Terminated</description>
    <inlineHelpText>Payee Terminated</inlineHelpText>
    <label>Payee Terminated Indicator</label>
    <type>Checkbox</type>
</CustomField>