force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Title__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Title__c</fullName>
    <description>Payee Title</description>
    <inlineHelpText>Payee Title</inlineHelpText>
    <label>Title</label>
    <length>20</length>
    <type>Text</type>
</CustomField>