force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Total_Allowances__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Total_Allowances__c</fullName>
    <description>The total value of all reportable allowances.</description>
    <inlineHelpText>The total value of all reportable allowances.</inlineHelpText>
    <label>Total Allowances</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>