force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Total_Contributions__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Total_Contributions__c</fullName>
    <description>Total Superannuation contribution</description>
    <formula>tc9_eau__Child_Contribution__c  +  tc9_eau__Personal_Contribution__c  +  tc9_eau__Spouse_Contribution__c  +  tc9_eau__Third_Party_Contribution__c + tc9_eau__Super_Guarantee__c + tc9_eau__Award_or_Productivity__c + tc9_eau__Voluntary_Additional__c + tc9_eau__Salary_Sacrifice__c +  tc9_eau__Employer_Additional_Super__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Superannuation contribution</inlineHelpText>
    <label>Total Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>