force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Total_INB_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Total_INB_PAYGW_Amount__c</fullName>
    <description>Total INB PAYGW YTD</description>
    <inlineHelpText>Total INB PAYGW YTD</inlineHelpText>
    <label>Payee Total INB PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>