force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Total_Paid_Leave__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Total_Paid_Leave__c</fullName>
    <description>The sum of all reportable leave payments YTD.</description>
    <inlineHelpText>The sum of all reportable leave payments YTD.</inlineHelpText>
    <label>Total Paid Leave</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>