force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Unique_Superannuation_Identifier__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Unique_Superannuation_Identifier__c</fullName>
    <formula>tc9_eau__Superannuation_Fund__r.tc9_pr__Unique_Superannuation_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Superannuation Identifier</label>
    <type>Text</type>
</CustomField>