force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__VA_Gross_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__VA_Gross_Payment__c</fullName>
    <description>Total VolA Gross YTD</description>
    <inlineHelpText>Total VolA Gross YTD</inlineHelpText>
    <label>Payee Voluntary Agreement Gross Payment</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>