force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__VA_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__VA_PAYGW_Amount__c</fullName>
    <description>Total VolA PAYGW YTD</description>
    <inlineHelpText>Total VolA PAYGW YTD</inlineHelpText>
    <label>Payee Total Voluntary Agreement PAYGW Am</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>