force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Value_NSW__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Value_NSW__c</fullName>
    <description>New South Wales value</description>
    <label>Value NSW</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>