force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Value_QLD__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Value_QLD__c</fullName>
    <description>Queensland combined value</description>
    <formula>tc9_eau__Value_QLD_Metro__c + tc9_eau__Value_QLD_Regional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value QLD</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>