force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Value_QLD_Regional__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Value_QLD_Regional__c</fullName>
    <description>Queensland Regional value</description>
    <label>Value QLD Regional</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>