force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Value_Total__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Value_Total__c</fullName>
    <description>Australian value</description>
    <formula>tc9_eau__Value_ACT__c + tc9_eau__Value_NSW__c + tc9_eau__Value_NT__c + tc9_eau__Value_QLD__c + tc9_eau__Value_SA__c + tc9_eau__Value_TAS__c + tc9_eau__Value_VIC__c + tc9_eau__Value_WA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Total</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>