force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Value_VIC_Metro__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Value_VIC_Metro__c</fullName>
    <description>Victoria Metropolitan value</description>
    <label>Value VIC Metro</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>