force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Voluntary_Additional__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Voluntary_Additional__c</fullName>
    <label>Voluntary Additional</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>