force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__WHM_Gross_Payment__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__WHM_Gross_Payment__c</fullName>
    <description>Gross earnings whilst categorised as a Working Holiday Maker</description>
    <inlineHelpText>Gross earnings whilst categorised as a Working Holiday Maker</inlineHelpText>
    <label>WHM Gross Payment</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>