force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__WHM_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__WHM_PAYGW_Amount__c</fullName>
    <description>The total amount of PAYG whilst categorised as a working holiday maker</description>
    <inlineHelpText>The total amount of PAYG whilst categorised as a working holiday maker</inlineHelpText>
    <label>Payee Working Holiday Maker PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>