force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Year_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Year_of_Birth__c</fullName>
    <description>Birth Year of the related Payee</description>
    <inlineHelpText>Birth Year of the related Payee</inlineHelpText>
    <label>Payee Year of Birth</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>