force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__Payroll_Tax_Detail.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__Payroll_Tax_Detail</fullName>
    <active>true</active>
    <description>Australian Payroll Tax lodgement details at the Pay Code and Locality Level</description>
    <label>Payroll Tax Detail</label>
</RecordType>