force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__Payroll_Tax_Summary.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__Payroll_Tax_Summary</fullName>
    <active>true</active>
    <description>Australian Payroll Tax lodgement details at the Locality Level</description>
    <label>Payroll Tax Summary</label>
</RecordType>