force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_Allowance.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_Allowance</fullName>
    <active>true</active>
    <description>Used to define a child STP Allowance record</description>
    <label>STP Allowance</label>
</RecordType>