force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_Deduction.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_Deduction</fullName>
    <active>true</active>
    <description>Used to define a child STP Deduction record</description>
    <label>STP Deduction</label>
</RecordType>