force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_ETP.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_ETP</fullName>
    <active>true</active>
    <description>Used to define a child STP ETP record</description>
    <label>STP ETP</label>
</RecordType>