force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_Lump_Sum.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_Lump_Sum</fullName>
    <active>true</active>
    <description>Used to define a child STP Lump Sum record</description>
    <label>STP Lump Sum</label>
</RecordType>