force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_Paid_Leave.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_Paid_Leave</fullName>
    <active>true</active>
    <description>Used to define a child STP Paid Leave record</description>
    <label>STP Paid Leave</label>
</RecordType>