force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/recordTypes/tc9_eau__STP_Salary_Sacrifice.recordType-meta.xml
<RecordType>
    <fullName>tc9_eau__STP_Salary_Sacrifice</fullName>
    <active>true</active>
    <description>Used to define a child STP Salary Sacrifice record</description>
    <label>STP Salary Sacrifice</label>
</RecordType>