force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/validationRules/tc9_eau__test_validation_DO_NOT_package.validationRule-meta.xml
<ValidationRule>
    <fullName>tc9_eau__test_validation_DO_NOT_package</fullName>
    <active>false</active>
    <errorConditionFormula>true</errorConditionFormula>
    <errorMessage>test</errorMessage>
</ValidationRule>